--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+a { 
+  
+  text-decoration: none;
+}
+
+.section-outer {
+  padding: 0 20px
+}
+.section-inner {
+  max-width: 1140px;
+  padding: 80px 0 ;
+  margin: 0 auto;
+
+ 
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
